feat: translate to english

--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -3,7 +3,8 @@
   "exclude": ["node_modules"],
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist"
+    "outDir": "dist",
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src"]
 }
