--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": ". .venv/bin/activate;python3 -m pip install flask;python3 server.py"
+    "dev": "python3 -m venv .venv;. .venv/bin/activate;python3 -m pip install flask;python3 server.py"
   },
   "keywords": [],
   "author": "",
